fix: fix nav scrollbar in IE 11 + fix dependency-related JS error getting thrown in IE 11

--- a/packages/uikit-workshop/src/scripts/components/pl-nav/pl-nav.scss
+++ b/packages/uikit-workshop/src/scripts/components/pl-nav/pl-nav.scss
@@ -17,9 +17,7 @@ pl-nav {
     .pl-c-body--theme-sidebar & {
       display: block;
       max-height: 100%;
-      // overflow: auto;
-      overflow: scroll;
-
+      overflow-y: scroll;
     }
   }
 }
